feat: category routes
