# src/routes.ts
@@ -3,6 +3,7 @@ import swaggerUi from 'swagger-ui-express';
 import apiSpec from '../openapi.json';
 
 import * as ProductController from './controllers/product';
+import * as CategoryController from './controllers/category';
 
 const swaggerUiOptions = {
   customCss: '.swagger-ui .topbar { display: none }'
@@ -14,6 +15,14 @@ const router = Router();
 router.post('/product/add', ProductController.add);
 router.get('/product/all', ProductController.all);
 router.get('/product/search', ProductController.search);
+router.put('/product/update', ProductController.update);
+router.delete('/product/delete', ProductController.del);
+
+// category routes
+router.post('/category/add', CategoryController.add);
+router.get('/category/all', CategoryController.all);
+router.put('/category/update', CategoryController.update);
+router.delete('/category/delete', CategoryController.del);
 
 // Dev routes
 if (process.env.NODE_ENV === 'development') {
